# sphinxcontrib-gitloginfo

./: .editorconfig  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  USAGE.rst  setup.cfg  setup.py
git-restore-mtime/: example-gitloginfo.json  git-restore-mtime-ORIGINAL.py  git-restore-mtime-modified.py
sphinxcontrib/gitloginfo/: __init__.py
tests/: conftest.py  test_gitloginfo.py
tests/roots/test-basic/: conf.py
