[metadata]
name = sphinxcontrib-gitloginfo
summary = Provide properties obtained from git log in page rendering context.
description-file =
    README.rst
author = Martin Bless
author-email = martin.bless@mbless.de
home-page = https://github.com/TYPO3-Documentation/sphinxcontrib-gitloginfo
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Documentation
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[wheel]
universal = 1

[mypy]
python_version = 2.7
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True

[flake8]
show-source = True
